# discord-petbot

./: Cargo.toml  Dockerfile
src/: main.rs
src/commands/: gifcmd.rs  mod.rs
