[package]
name = "discord-petbot"
version = "0.1.0"
authors = ["TheFearsomePotato <fearsome@potato.faith>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
image = "0.23"
gif ="*"
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"